# artifacts

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DYSPEL.md  GUI.md  README.md  SECURITY.md  deny.toml  lcov.info  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  fuzz.yml
benches/: pack.rs
deploy/: .dockerignore  Dockerfile  README.md
deploy/k8s/: deployment.yaml  pvc.yaml  secrets.example.yaml  service.yaml
deploy/observability/: alerts.yml  dashboard.json
deploy/systemd/: artifacts.env  artifacts.service
docs/: COVERAGE.md
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: git_proto.rs  pkt_line.rs
scripts/: backup.sh  bench_clone.sh  bench_concurrent.sh  bench_fork.sh  bench_push.sh  restore.sh  stress.sh
src/: alternates_cache.rs  app.rs  audit.rs  auth.rs  blocking.rs  commits.rs  config.rs  db_migrate.rs  error.rs  events.rs  gc.rs  git_cmd.rs  git_wire_v2.rs  ids.rs  ip_rate_limit.rs  jwt.rs  lib.rs  main.rs  merge.rs  metrics.rs  native_pack.rs  object_store.rs  ownership.rs  pkt_line.rs  rate_limit.rs  reads.rs  refs.rs  request_id.rs  rest.rs  secrets.rs  smart_http.rs  storage.rs  test_support.rs  tokens.rs  webhooks.rs
src/git_wire/: mod.rs  proto.rs  v2.rs
src/native_pack/: parse.rs
src/object_store/: conformance.rs  mod.rs  tests.rs
src/reads/: helpers.rs  mod.rs
src/rest/: admin.rs  health.rs  repos.rs  tokens.rs  webhooks.rs
tests/: backup_restore_roundtrip.rs  e2e_inprocess.rs  e2e_no_self_terminate.rs  e2e_shutdown.rs  e2e_shutdown_immediate.rs  e2e_subprocess.rs  e2e_tls.rs  e2e_tls_mismatch.rs  e2e_variant_bootstrap.rs  integration_smoke.rs  smoke.sh
