[package]
name = "artifacts"
version = "0.0.1"
edition = "2021"
rust-version = "1.75"
description = "A versioned filesystem that speaks Git — prototype"
license = "Apache-2.0"

[[bin]]
name = "artifacts"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
base64 = "0.22"
dashmap = "6"
bytes = "1"
http-body-util = "0.1"
futures = "0.3"
clap = { version = "4", features = ["derive", "env"] }
async-trait = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
subtle = "2"
jsonwebtoken = "9"
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15", default-features = false }

# GUI-only deps; opt-in via `--features gui` so the server binary stays lean.
eframe = { version = "0.27", optional = true }
ureq = { version = "2", features = ["json"], optional = true }

[features]
default = []
gui = ["dep:eframe", "dep:ureq"]

[[bin]]
name = "artifacts-gui"
path = "src/bin/artifacts-gui.rs"
required-features = ["gui"]

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
