[package]
name = "artifacts"
version = "0.0.1"
edition = "2021"
rust-version = "1.88"
description = "A versioned filesystem that speaks Git — prototype"
license = "Apache-2.0"

# Lint policy — single source of truth, applied to the library, both
# binaries, tests, and benches. Run as `cargo clippy --all-targets --
# -D warnings`, so every `warn` below is effectively a hard gate.
[lints.rust]
# `unused` is a group, so it takes priority -1 to let the specific
# lints below (and any future ones) override it.
unused = { level = "deny", priority = -1 }
# Forward guard: any future `unsafe fn` must wrap its own unsafe ops in
# an explicit `unsafe {}` block rather than inheriting the fn's unsafety.
unsafe_op_in_unsafe_fn = "deny"
# Flag `pub` items that aren't actually reachable from outside the crate
# so the public surface stays intentional — internal helpers become
# `pub(crate)` rather than masquerading as API.
unreachable_pub = "warn"

[lints.clippy]
# Adopt the pedantic group wholesale (priority -1 so the targeted
# `allow`s below win), then opt out of the categories that are
# deliberate or pure noise for a server binary. Everything not allowed
# here is enforced — including the lints we cleaned up to get to green.
pedantic = { level = "warn", priority = -1 }
# Nursery group too (also priority -1). These are newer/sharper lints;
# the few that are noisy or unstable for this codebase are opted out
# below alongside the pedantic exceptions.
nursery = { level = "warn", priority = -1 }
# Unsafe discipline (restriction group): every `unsafe` block must carry
# a `// SAFETY:` comment and perform exactly one unsafe operation.
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"

# -- Allowed: documentation style. This is an application, not a
#    published library API, so we don't require per-item rustdoc
#    sections on every internal `pub` item. (The core public traits and
#    entry points still get `# Errors`/`# Panics`/examples by hand.)
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

# -- Allowed: numeric casts. Epoch-second timestamps (u64<->i64 for
#    SQLite's signed INTEGER), byte sizes (u64<->usize), and token-bucket
#    arithmetic (f64) are deliberate, bounded conversions; `as` is
#    clearer than a `try_from().expect()` dance at these sites.
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"

# -- Allowed: equivalent-readability style choices. These flag perfectly
#    clear code; rewriting wholesale is churn without a clarity win.
redundant_closure_for_method_calls = "allow"
manual_let_else = "allow"
single_match_else = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
manual_assert = "allow"
ignored_unit_patterns = "allow"
items_after_statements = "allow"
needless_raw_string_hashes = "allow"
unnecessary_debug_formatting = "allow"
used_underscore_binding = "allow"

# -- Allowed: would force signature churn for marginal benefit.
needless_pass_by_value = "allow"
trivially_copy_pass_by_ref = "allow"
unnecessary_wraps = "allow"

# -- Allowed: large dispatch/match functions whose length is inherent to
#    the protocol/route surface they cover; splitting hurts readability.
too_many_lines = "allow"

# -- Allowed: bindings like `oid`/`old`, `s1`/`s2` are clear in context.
similar_names = "allow"

# -- Allowed: a few sync helpers/handlers are `async` to sit uniformly in
#    async call sites and to leave room for awaits without a churny
#    signature change.
unused_async = "allow"

# -- Allowed: git treats the `.lock` ref-name suffix and our own
#    `<id>.git` directory suffix as literally lowercase, so a
#    case-sensitive `ends_with` is correct, not a bug.
case_sensitive_file_extension_comparisons = "allow"

# -- Nursery exceptions. The nursery group is on (above), but these
#    specific lints are unstable/noisy or fight this codebase's
#    deliberate choices, so they're opted out. Everything else in
#    nursery is enforced (we fixed redundant_clone + or_fun_call to get
#    here).
too_long_first_doc_paragraph = "allow"  # narrative module/fn docs are intentional
use_self = "allow"                      # explicit type names read clearer in impls; high churn
option_if_let_else = "allow"            # `map_or_else` is often *less* readable than `if let`
missing_const_for_fn = "allow"          # nursery, over-eager; const-ness isn't a goal here
redundant_pub_crate = "allow"           # pairs with the unreachable_pub policy; would fight it
cognitive_complexity = "allow"          # large protocol/route dispatch fns (see too_many_lines)
significant_drop_tightening = "allow"   # drop-order rewrites are subtle; not worth the risk
needless_pass_by_ref_mut = "allow"      # several are trait-signature-constrained
suboptimal_flops = "allow"              # token-bucket float math is clearer as written
branches_sharing_code = "allow"         # hoisting shared arms often hurts readability

[[bin]]
name = "artifacts"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
# axum-server adds rustls-tls bind paths. Used only when --tls-cert and
# --tls-key are both set; the no-TLS dev path keeps using axum::serve.
axum-server = { version = "0.7", features = ["tls-rustls"] }
# rustls 0.23 dropped the implicit default crypto provider — pin
# `ring` here and call `install_default()` at startup so the TLS
# bind path doesn't panic on the first handshake.
rustls = { version = "0.23", features = ["ring"], default-features = false }
tokio = { version = "1", features = ["full"] }
# `sync` brings BroadcastStream — adapter from tokio::sync::broadcast
# to a Stream usable by axum's Sse response.
tokio-stream = { version = "0.1", features = ["sync"] }
# K4 graceful-shutdown drain uses tokio_util::sync::CancellationToken
# as the broadcast cancel signal across every long-lived spawn site.
# `rt` feature unlocks the sync + task helpers we need.
tokio-util = { version = "0.7", features = ["rt"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "limit", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# OTLP exporter — opt-in via `--otlp-endpoint` / ARTIFACTS_OTLP_ENDPOINT.
# Default off; no impact on deployments that don't set the flag.
# Pinned to the version-compatible set: opentelemetry 0.24,
# opentelemetry-otlp 0.17 (gRPC via tonic), tracing-opentelemetry 0.25.
# `tonic` feature gives the gRPC exporter; HTTP/protobuf is also
# available via the `http-proto` feature if a collector requires it.
opentelemetry = "0.24"
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17", default-features = false, features = ["grpc-tonic", "trace"] }
tracing-opentelemetry = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
base64 = "0.22"
dashmap = "6"
futures = "0.3"
clap = { version = "4", features = ["derive", "env"] }
async-trait = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
# Connection pool for the four SQLite stores (tokens / audit /
# webhooks / ownership). Replaces the single Arc<TokioMutex<Connection>>
# that previously serialized every store-side query — under WAL mode a
# pool gives real reader parallelism (N readers + 1 writer
# concurrently). Pinned to the version that targets `rusqlite 0.31`.
r2d2 = "0.8"
r2d2_sqlite = { version = "0.24" }
sha2 = "0.10"
subtle = "2"
jsonwebtoken = "9"
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15", default-features = false }
# gitoxide: native git protocol layer. Default features include sha1 +
# zlib + parallel pack-cache, which is what we need for M1b-2b/M1b-3.
# We only depend on the umbrella crate to avoid coupling to the
# evolving sub-crate version matrix; pulling individual gix-* crates
# directly tends to break on every release.
# `tree-editor` is opt-in in gix 0.83; the REST-commit builder in
# src/commits.rs uses Repository::edit_tree() to mutate the base tree
# without copying it to a temp index.
gix = { version = "0.83", features = ["tree-editor"] }
# gix-pack is gix's pack-format crate. Used directly (not via the
# `gix` umbrella) because the umbrella doesn't re-export it. Pin to
# the version `gix 0.83` brings in transitively so the types line
# up with `repo.objects` (a gix_odb::Handle that implements
# gix_pack::Find).
gix-pack = "0.70"
gix-hash = "0.25"
# Already in the dep graph transitively via gix; named here so the
# SqliteObjectStore::ingest_pack code (loose-object zlib deflate) can
# import it without going through a private gix module.
flate2 = "1"
# Re-exported from gix-object but not from gix's umbrella crate; the
# `Commit::parents` field is a `SmallVec<[ObjectId; 1]>`, so the
# REST-commit builder (src/commits.rs) needs to name the type directly.
smallvec = "1"
# sha1 is needed for the empty-pack trailer in native_pack.rs.
sha1 = "0.10"
# prodash::Discard is used as the no-op progress sink for
# pack-generation routines that take a Count. Pinned to the version
# gix-pack 0.70 brings in transitively so the trait types unify
# (gix-pack's iter_from_counts requires the same prodash types).
prodash = { version = "31", default-features = false, features = ["progress-tree"] }

# Webhook delivery over HTTP/HTTPS. ureq is the smallest sync HTTP
# client we can plausibly take a dep on; we wrap it in spawn_blocking
# so it doesn't tie up tokio worker threads. Was previously
# `optional = true` and gated behind the GUI feature; M6 uses it for
# webhook fan-out so it has to be in the default build.
ureq = { version = "2", features = ["json", "tls"] }
hmac = "0.12"
# AES-256-GCM for encrypting webhook HMAC secrets at rest. Same
# RustCrypto family as sha2/hmac/subtle; no new transitive baggage.
aes-gcm = "0.10"

# GUI-only deps; opt-in via `--features gui` so the server binary stays lean.
eframe = { version = "0.27", optional = true }
egui_plot = { version = "0.27", optional = true }

[features]
default = []
gui = ["dep:eframe", "dep:egui_plot"]

[[bin]]
name = "artifacts-gui"
path = "src/bin/artifacts-gui/main.rs"
required-features = ["gui"]

[dev-dependencies]
tempfile = "3"
# Property tests for pagination + bucket math. Kept dev-only;
# `std` is the default feature, which is all we need.
proptest = "1"
# Used by tests/integration_smoke.rs to send SIGTERM to the spawned
# server (`std::process::Child::kill` is SIGKILL on Unix; the
# graceful-shutdown scenario specifically needs SIGTERM).
libc = "0.2"
# In-process snapshotting recorder so tests can assert metric values
# (e.g. the M4 webhook-event-drop counter). Pinned to the 0.17 line
# already in the tree transitively via metrics-exporter-prometheus, so
# this introduces no new version into the graph.
metrics-util = "0.17"
# `util` feature pulls in `ServiceExt::oneshot`, which the rest/* router
# tests use to drive handlers in-process (no socket). Same 0.5 line the
# production `tower` dep already resolves to — no new graph version.
tower = { version = "0.5", features = ["util"] }
# Bench harness for `cargo bench` (benches/pack.rs). B3 ("concurrent
# load bench") was driven by an ad-hoc script with no reproducible
# entry point; this gives one. default-features off drops the
# plotters/gnuplot HTML-report stack (and its license/transitive
# baggage) — we keep only `cargo_bench_support`, which is what makes
# the binary a working `cargo bench` target. CLI timing output is all
# we need; no HTML reports.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "pack"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
