[package]
name = "artifacts"
version = "0.0.1"
edition = "2021"
rust-version = "1.88"
description = "A versioned filesystem that speaks Git — prototype"
license = "Apache-2.0"

[[bin]]
name = "artifacts"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
# axum-server adds rustls-tls bind paths. Used only when --tls-cert and
# --tls-key are both set; the no-TLS dev path keeps using axum::serve.
axum-server = { version = "0.7", features = ["tls-rustls"] }
# rustls 0.23 dropped the implicit default crypto provider — pin
# `ring` here and call `install_default()` at startup so the TLS
# bind path doesn't panic on the first handshake.
rustls = { version = "0.23", features = ["ring"], default-features = false }
tokio = { version = "1", features = ["full"] }
# `sync` brings BroadcastStream — adapter from tokio::sync::broadcast
# to a Stream usable by axum's Sse response.
tokio-stream = { version = "0.1", features = ["sync"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# OTLP exporter — opt-in via `--otlp-endpoint` / ARTIFACTS_OTLP_ENDPOINT.
# Default off; no impact on deployments that don't set the flag.
# Pinned to the version-compatible set: opentelemetry 0.24,
# opentelemetry-otlp 0.17 (gRPC via tonic), tracing-opentelemetry 0.25.
# `tonic` feature gives the gRPC exporter; HTTP/protobuf is also
# available via the `http-proto` feature if a collector requires it.
opentelemetry = "0.24"
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17", default-features = false, features = ["grpc-tonic", "trace"] }
tracing-opentelemetry = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
base64 = "0.22"
dashmap = "6"
bytes = "1"
http-body-util = "0.1"
futures = "0.3"
clap = { version = "4", features = ["derive", "env"] }
async-trait = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
# Connection pool for the four SQLite stores (tokens / audit /
# webhooks / ownership). Replaces the single Arc<TokioMutex<Connection>>
# that previously serialized every store-side query — under WAL mode a
# pool gives real reader parallelism (N readers + 1 writer
# concurrently). Pinned to the version that targets `rusqlite 0.31`.
r2d2 = "0.8"
r2d2_sqlite = { version = "0.24" }
sha2 = "0.10"
subtle = "2"
jsonwebtoken = "9"
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15", default-features = false }
# gitoxide: native git protocol layer. Default features include sha1 +
# zlib + parallel pack-cache, which is what we need for M1b-2b/M1b-3.
# We only depend on the umbrella crate to avoid coupling to the
# evolving sub-crate version matrix; pulling individual gix-* crates
# directly tends to break on every release.
# `tree-editor` is opt-in in gix 0.83; the REST-commit builder in
# src/commits.rs uses Repository::edit_tree() to mutate the base tree
# without copying it to a temp index.
gix = { version = "0.83", features = ["tree-editor"] }
# gix-pack is gix's pack-format crate. Used directly (not via the
# `gix` umbrella) because the umbrella doesn't re-export it. Pin to
# the version `gix 0.83` brings in transitively so the types line
# up with `repo.objects` (a gix_odb::Handle that implements
# gix_pack::Find).
gix-pack = "0.70"
gix-features = "0.48"
gix-hash = "0.25"
gix-odb = "0.80"
gix-object = "0.51"
# Already in the dep graph transitively via gix; named here so the
# SqliteObjectStore::ingest_pack code (loose-object zlib deflate) can
# import it without going through a private gix module.
flate2 = "1"
# Re-exported from gix-object but not from gix's umbrella crate; the
# `Commit::parents` field is a `SmallVec<[ObjectId; 1]>`, so the
# REST-commit builder (src/commits.rs) needs to name the type directly.
smallvec = "1"
# sha1 is needed for the empty-pack trailer in native_pack.rs.
sha1 = "0.10"
# prodash::Discard is used as the no-op progress sink for
# pack-generation routines that take a Count. Pinned to the version
# gix-features 0.48 brings in transitively so the trait types unify
# (gix-pack's iter_from_counts requires the same prodash types).
prodash = { version = "31", default-features = false, features = ["progress-tree"] }

# Webhook delivery over HTTP/HTTPS. ureq is the smallest sync HTTP
# client we can plausibly take a dep on; we wrap it in spawn_blocking
# so it doesn't tie up tokio worker threads. Was previously
# `optional = true` and gated behind the GUI feature; M6 uses it for
# webhook fan-out so it has to be in the default build.
ureq = { version = "2", features = ["json", "tls"] }
hmac = "0.12"
# AES-256-GCM for encrypting webhook HMAC secrets at rest. Same
# RustCrypto family as sha2/hmac/subtle; no new transitive baggage.
aes-gcm = "0.10"

# GUI-only deps; opt-in via `--features gui` so the server binary stays lean.
eframe = { version = "0.27", optional = true }
egui_plot = { version = "0.27", optional = true }

[features]
default = []
gui = ["dep:eframe", "dep:egui_plot"]

[[bin]]
name = "artifacts-gui"
path = "src/bin/artifacts-gui/main.rs"
required-features = ["gui"]

[dev-dependencies]
tempfile = "3"
# Property tests for pagination + bucket math. Kept dev-only;
# `std` is the default feature, which is all we need.
proptest = "1"
# Used by tests/integration_smoke.rs to send SIGTERM to the spawned
# server (`std::process::Child::kill` is SIGKILL on Unix; the
# graceful-shutdown scenario specifically needs SIGTERM).
libc = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1
